--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,13 @@ services:
     ports:
       - "8502:8501"
     environment:
-      - ART_DIR=/app/artefactos
+      - ART_DIR=/app/artefactos/v1
     volumes:
       - ./artefactos:/app/artefactos:rw
+      - ./streamlit_app.py:/app/streamlit_app.py:rw
+    command: >
+      streamlit run streamlit_app.py
+      --server.port=8501
+      --server.address=0.0.0.0
+      --server.fileWatcherType=poll
     restart: unless-stopped
